--- a/Bitcoin-Blockchain/Base.lproj/LaunchScreen.storyboard
+++ b/Bitcoin-Blockchain/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -28,14 +29,22 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fausto Castagnari Marouvo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LGE-VV-O1t">
+                                <rect key="frame" x="266.5" y="687.5" width="131.5" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="0w0-Rp-88o" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="4pP-a5-dU3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LGE-VV-O1t" secondAttribute="trailing" constant="16" id="6uy-2I-zf7"/>
                             <constraint firstItem="fci-Br-7uL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EsU-NS-lbY"/>
                             <constraint firstItem="fci-Br-7uL" firstAttribute="top" secondItem="0w0-Rp-88o" secondAttribute="bottom" constant="8" id="Ugx-Bm-fKa"/>
                             <constraint firstItem="0w0-Rp-88o" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fTv-zw-Tdg"/>
+                            <constraint firstItem="LGE-VV-O1t" firstAttribute="top" secondItem="fci-Br-7uL" secondAttribute="bottom" constant="200" id="tpJ-9R-qLR"/>
                         </constraints>
                     </view>
                 </viewController>
