--- a/Bitcoin/Base.lproj/LaunchScreen.storyboard
+++ b/Bitcoin/Base.lproj/LaunchScreen.storyboard
@@ -18,13 +18,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blockchain" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Br-7uL">
-                                <rect key="frame" x="165.5" y="466.5" width="83" height="21"/>
+                                <rect key="frame" x="165.5" y="516.5" width="83" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bitcoin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0w0-Rp-88o">
-                                <rect key="frame" x="180.5" y="437.5" width="53" height="21"/>
+                                <rect key="frame" x="180.5" y="487.5" width="53" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -35,16 +35,25 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoBitcoin" translatesAutoresizingMaskIntoConstraints="NO" id="MHN-Ub-DSv">
+                                <rect key="frame" x="143" y="334" width="128" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="K1Q-7N-54q"/>
+                                    <constraint firstAttribute="width" constant="128" id="ciW-sT-7KQ"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0w0-Rp-88o" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="4pP-a5-dU3"/>
+                            <constraint firstItem="0w0-Rp-88o" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="50" id="4pP-a5-dU3"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LGE-VV-O1t" secondAttribute="trailing" constant="16" id="6uy-2I-zf7"/>
+                            <constraint firstItem="MHN-Ub-DSv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Av9-Fh-dnd"/>
                             <constraint firstItem="fci-Br-7uL" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EsU-NS-lbY"/>
+                            <constraint firstItem="MHN-Ub-DSv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-50" id="U4P-D3-0G0"/>
                             <constraint firstItem="fci-Br-7uL" firstAttribute="top" secondItem="0w0-Rp-88o" secondAttribute="bottom" constant="8" id="Ugx-Bm-fKa"/>
                             <constraint firstItem="0w0-Rp-88o" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fTv-zw-Tdg"/>
-                            <constraint firstItem="LGE-VV-O1t" firstAttribute="top" secondItem="fci-Br-7uL" secondAttribute="bottom" constant="200" id="tpJ-9R-qLR"/>
+                            <constraint firstItem="LGE-VV-O1t" firstAttribute="top" secondItem="fci-Br-7uL" secondAttribute="bottom" constant="150" id="tpJ-9R-qLR"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -54,6 +63,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="logoBitcoin" width="128" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
